List insead of p in footer

--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
     </main>
     <footer>
         <a href=""><h2>WebStudio</h2></a>
-        <address>            
+        <address>                       
             <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
-            <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <ul>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            </ul>
         </address>
     </footer>    
 </body>
