--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <title>Головна</title>
 </head>
 <body>
-    <header>
-        <a href=""><h2>WebStudio</h2></a>
+    <header>        
         <nav>
-            <ul>
+            <a href="">WebStudio</a>
+            <ul>                
                 <li><a href="">Студія</a></li>
                 <li><a href="">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
     </header>
     <main>
         <section>
@@ -24,39 +26,30 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section>
-            <h2>Тут придуманий заголовок, який потім сховається</h2>
+            <h2>Наші переваги</h2>
             <ul>
-                <li>
-                    <article>
-                        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                    </article>
+                <li>                    
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <article>
-                        <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                    </article>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>                    
                 </li>
-                <li>
-                    <article>
-                        <h3>ПЛАНУВАННЯ</h3>
-                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                    </article>
+                <li>                
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>                    
                 </li>
-                <li>
-                    <article>
-                        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </article>
-                </li>
-                
+                <li>                   
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>                    
+                </li>                
             </ul>
         </section>       
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="images/img1.jpg" alt="Руки програміста на клавіатурі перед монтітором"></li>
+                <li><img src="images/img11.jpg" alt="Руки програміста на клавіатурі перед монтітором"></li>
                 <li><img src="images/img21.jpg" alt="Програміст тримає смартфон перед монітором ноутбука"></li>
                 <li><img src="images/img31.jpg" alt="Руки програміста тримають планшет, на екрані - вибір кольору"></li>
             </ul>
@@ -93,13 +86,12 @@
                         <p>UI Designer</p>
                     </article>
                 </li>
-            </ul>
-        
+            </ul>        
         </section>
 
     </main>
     <footer>
-        <a href=""><h2>WebStudio</h2></a>
+        <a href="">WebStudio</a>
         <address>                       
             <p>м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
