--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="images/img11.jpg" alt="Руки програміста на клавіатурі перед монтітором"></li>
-                <li><img src="images/img21.jpg" alt="Програміст тримає смартфон перед монітором ноутбука"></li>
-                <li><img src="images/img31.jpg" alt="Руки програміста тримають планшет, на екрані - вибір кольору"></li>
+                <li><img src="./images/img11.jpg" alt="Руки програміста на клавіатурі перед монтітором"></li>
+                <li><img src="./images/img21.jpg" alt="Програміст тримає смартфон перед монітором ноутбука"></li>
+                <li><img src="./images/img31.jpg" alt="Руки програміста тримають планшет, на екрані - вибір кольору"></li>
             </ul>
 
         </section>
@@ -60,28 +60,28 @@
             <ul>
                 <li>
                     <article>
-                        <img src="images/team11.jpg" alt="Портрет Ігоря" width="270">
+                        <img src="./images/team11.jpg" alt="Портрет Ігоря" width="270">
                         <h3>Ігор Дем'яненко</h3>
                         <p>Product Designer</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <img src="images/team21.jpg" alt="Портрет Ольги" width="270">
+                        <img src="./images/team21.jpg" alt="Портрет Ольги" width="270">
                         <h3>Ольга Рєпіна</h3>
                         <p>Frontend Developer</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <img src="images/team31.jpg" alt="Портрет Миколи" width="270">
+                        <img src="./images/team31.jpg" alt="Портрет Миколи" width="270">
                         <h3>Микола Тарасов</h3>
                         <p>Marketing</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <img src="images/team41.jpg" alt="Портрет Михайла" width="270">
+                        <img src="./images/team41.jpg" alt="Портрет Михайла" width="270">
                         <h3>Михайло Єрмаков</h3>
                         <p>UI Designer</p>
                     </article>
